# document-ai-agent

./: .env.example  .gitignore  CATEGORIZATION_SUMMARY.md  Dockerfile  FINAL_SOLUTION.md  LAUNCH_INSTRUCTIONS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_TREES.md  TROUBLESHOOTING.md  VISUALIZATION_FIX.md  VISUALIZATION_SETUP.md  check_curl.sh  check_network.sh  check_service.sh  cleanup.sh  compare_trees.sh  create_test_tree.sh  create_test_trees.py  debug_tree_structure.py  docker-compose.simple.yml  docker-compose.yml  fix_container.sh  pyproject.toml  restart_visualization.sh  run.sh  setup_nginx.sh  simple_debug.py  start.sh  start_minimal.sh  start_project.sh  start_simple.sh  start_visualization.sh  tasks.md  test_tree_export.py  test_unique_trees.sh  test_visualization.sh
ai_agent/: __init__.py  main.py
ai_agent/cli/: __init__.py  commands.py
ai_agent/config/: logging.yaml
ai_agent/core/: __init__.py  document_manager.py  ollama_client.py  query_processor.py  session_manager.py
ai_agent/models/: __init__.py  document.py  message.py  query_response.py  session.py
ai_agent/utils/: __init__.py  async_processor.py  cache_manager.py  chunk_optimizer.py  decision_tree.py  error_handling.py  file_processor.py  health_monitor.py  logging_config.py  performance_monitor.py  tree_exporter.py
docs/: LOGGING_CONFIGURATION.md  PERFORMANCE_OPTIMIZATION.md
examples/: logging-usage-examples.py
examples/file-formats/: sample.md  sample.txt  sample_pdf.txt
examples/logging-configs/: development.env  enhanced-logging.env  production.env  testing.env
mcp-servers/: .env.example  README.md  test-mcp-server.sh
mcp-servers/chromadb-server/: Dockerfile  README.md  pyproject.toml  test_config_loading.py
mcp-servers/chromadb-server/config/: config.yaml
mcp-servers/chromadb-server/src/chromadb_mcp_server/: __init__.py  __main__.py  main.py
mcp-servers/chromadb-server/src/chromadb_mcp_server/core/: __init__.py  base_tool.py  config.py  mcp_server.py  tool_registry.py
mcp-servers/chromadb-server/tests/: __init__.py  test_basic_structure.py
mcp-servers/chromadb-server/tests/unit/: test_base_tool.py  test_config.py  test_mcp_server.py  test_tool_registry.py
test_docs/: sample.rtf
tests/: __init__.py  test_batch_upload.py  test_decision_tree.py  test_document_categorization.py  test_file_processor.py  test_integration.py  test_logging_system.py  test_models.py  test_ollama_client.py
visualization/: .dockerignore  Dockerfile  Dockerfile.fixed  Dockerfile.minimal  Dockerfile.simple  README.md  app.py  app_old.py  requirements.txt
visualization/.streamlit/: config.toml
(+15 files in other folders)
